--- a/owllook/templates/md/main.html
+++ b/owllook/templates/md/main.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="shortcut icon" href="/static/novels/img/favicon.ico"/>
     <link rel="bookmark" href="/static/novels/img/favicon.ico"/>
-    <link rel="stylesheet" href="/md/static/md/css/mdui.min.css">
+    <link href="//cdn.bootcss.com/mdui/0.2.1/css/mdui.min.css" rel="stylesheet">
     <meta name="msvalidate.01" content="7F5A4F41F59B7840336A1530F6D3474E"/>
     {% block header %}{% endblock %}
     <meta name="baidu-site-verification" content="j5gv2S1IaS"/>
@@ -35,7 +35,7 @@
 {% block content %}{% endblock %}
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-<script src="/md/static/md/js/mdui.min.js"></script>
+<script src="//cdn.bootcss.com/mdui/0.2.1/js/mdui.min.js"></script>
 <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
 document.write(unescape("%3Cspan id='cnzz_stat_icon_1262602051'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s19.cnzz.com/z_stat.php%3Fid%3D1262602051%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script>
 {% block script %}{% endblock %}
