--- a/owllook/templates/md/admin_book_list.html
+++ b/owllook/templates/md/admin_book_list.html
@@ -26,6 +26,10 @@
             <i class="mdui-list-item-icon mdui-icon material-icons">favorite</i>
             <div class="mdui-list-item-content"><a href="/md/book_list">我的书单</a></div>
         </li>
+        <li class="mdui-list-item mdui-ripple">
+            <i class="mdui-list-item-icon mdui-icon material-icons">notifications</i>
+            <div class="mdui-list-item-content"><a href="/md/noti_book">新书提醒</a></div>
+        </li>
         <li class="mdui-subheader">设置</li>
         <li class="mdui-list-item mdui-ripple">
             <i class="mdui-list-item-icon mdui-icon material-icons">settings</i>
@@ -48,7 +52,7 @@
     <div class="mdui-typo ">
         <center>该功能正在开发中，敬请期待，若有建议请及时反馈</center>
         <center><a target="_blank"
-                    href="https://github.com/howie6879/owllook">https://github.com/howie6879/owllook</a>
+                   href="https://github.com/howie6879/owllook">https://github.com/howie6879/owllook</a>
         </center>
     </div>
 </div>
