--- a/owllook/templates/md/index.html
+++ b/owllook/templates/md/index.html
@@ -26,6 +26,10 @@
             <i class="mdui-list-item-icon mdui-icon material-icons">favorite</i>
             <div class="mdui-list-item-content"><a href="/md/book_list">我的书单</a></div>
         </li>
+        <li class="mdui-list-item mdui-ripple">
+            <i class="mdui-list-item-icon mdui-icon material-icons">notifications</i>
+            <div class="mdui-list-item-content"><a href="/md/noti_book">新书提醒</a></div>
+        </li>
         <li class="mdui-subheader">设置</li>
         <li class="mdui-list-item mdui-ripple">
             <i class="mdui-list-item-icon mdui-icon material-icons">settings</i>
