--- a/owllook/templates/md/admin_setting.html
+++ b/owllook/templates/md/admin_setting.html
@@ -49,7 +49,7 @@
 {% include "toolbar.html" %}
 
 <div class="mdui-container-fluid">
-    <div class="mdui-panel mdui-panel-fluid" mdui-panel>
+    <div class="mdui-panel mdui-panel-fluid" id="panel">
         <div class="mdui-panel-item">
             <div class="mdui-panel-item-header">
                 <div class="mdui-panel-item-title">用户名</div>
@@ -60,7 +60,7 @@
                 <p class="mdui-text-color-black-icon">用户名无法更改</p>
             </div>
         </div>
-        <div class="mdui-panel-item">
+        <div class="mdui-panel-item" id="item-email">
             <div class="mdui-panel-item-header">
                 <div class="mdui-panel-item-title">邮箱</div>
                 <div class="mdui-panel-item-summary mdui-text-color-black-text">{{email}}</div>
@@ -69,15 +69,16 @@
             <div class="mdui-panel-item-body">
                 <div class="mdui-textfield mdui-textfield-floating-label">
                     <label class="mdui-textfield-label">请输入新邮箱</label>
-                    <input class="mdui-textfield-input" type="email"/>
+                    <input class="mdui-textfield-input" name="email" type="email"/>
+                    <div class="email-error"></div>
                 </div>
                 <div class="mdui-panel-item-actions">
-                    <button class="mdui-btn mdui-ripple">cancel</button>
-                    <button class="mdui-btn mdui-ripple">save</button>
+                    <button id="email-close" class="mdui-btn mdui-ripple">cancel</button>
+                    <button class="mdui-btn mdui-ripple emailSubmitBtn">save</button>
                 </div>
             </div>
         </div>
-        <div class="mdui-panel-item">
+        <div class="mdui-panel-item" id="item-pass">
             <div class="mdui-panel-item-header">
                 <div class="mdui-panel-item-title">修改密码</div>
                 <div class="mdui-panel-item-summary mdui-text-color-black-text">*******</div>
@@ -86,15 +87,17 @@
             <div class="mdui-panel-item-body">
                 <div class="mdui-textfield mdui-textfield-floating-label">
                     <label class="mdui-textfield-label">请输入原密码</label>
-                    <input class="mdui-textfield-input" type="password"/>
+                    <input class="mdui-textfield-input" name="old_pass" type="password"/>
                     <label class="mdui-textfield-label">请输入新密码</label>
-                    <input class="mdui-textfield-input" type="password"/>
+                    <input class="mdui-textfield-input" name="new_pass" type="password" required/>
+                    <div class="mdui-textfield-error">密码至少 6 位</div>
                     <label class="mdui-textfield-label">请再次输入新密码</label>
-                    <input class="mdui-textfield-input" type="password"/>
+                    <input class="mdui-textfield-input" name="new_pass1" type="password"/>
+                    <div class="pass-error"></div>
                 </div>
                 <div class="mdui-panel-item-actions">
-                    <button class="mdui-btn mdui-ripple">cancel</button>
-                    <button class="mdui-btn mdui-ripple">save</button>
+                    <button id="pass-close" class="mdui-btn mdui-ripple">cancel</button>
+                    <button class="mdui-btn mdui-ripple passSubmitBtn">save</button>
                 </div>
             </div>
         </div>
