修改密码&&修改邮箱

--- a/owllook/templates/md/admin_setting.html
+++ b/owllook/templates/md/admin_setting.html
@@ -35,10 +35,10 @@
             <i class="mdui-list-item-icon mdui-icon material-icons">settings</i>
             <div class="mdui-list-item-content"><a href="/md/setting">个人设置</a></div>
         </li>
-        <li class="mdui-list-item mdui-ripple">
-            <i class="mdui-list-item-icon mdui-icon material-icons">security</i>
-            <div class="mdui-list-item-content">修改密码</div>
-        </li>
+        <!--<li class="mdui-list-item mdui-ripple">-->
+            <!--<i class="mdui-list-item-icon mdui-icon material-icons">security</i>-->
+            <!--<div class="mdui-list-item-content">修改密码</div>-->
+        <!--</li>-->
         <li class="mdui-list-item mdui-ripple">
             <i class="mdui-list-item-icon mdui-icon material-icons">feedback</i>
             <div class="mdui-list-item-content">我要反馈</div>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="mdui-panel-item-actions">
                     <button id="email-close" class="mdui-btn mdui-ripple">cancel</button>
-                    <button class="mdui-btn mdui-ripple emailSubmitBtn">save</button>
+                    <button id="emailSubmitBtn" class="mdui-btn mdui-ripple">save</button>
                 </div>
             </div>
         </div>
@@ -97,7 +97,7 @@
                 </div>
                 <div class="mdui-panel-item-actions">
                     <button id="pass-close" class="mdui-btn mdui-ripple">cancel</button>
-                    <button class="mdui-btn mdui-ripple passSubmitBtn">save</button>
+                    <button id="passSubmitBtn" class="mdui-btn mdui-ripple">save</button>
                 </div>
             </div>
         </div>
