--- a/owllook/templates/md/admin_books.html
+++ b/owllook/templates/md/admin_books.html
@@ -35,10 +35,10 @@
             <i class="mdui-list-item-icon mdui-icon material-icons">settings</i>
             <div class="mdui-list-item-content"><a href="/md/setting">个人设置</a></div>
         </li>
-        <li class="mdui-list-item mdui-ripple">
-            <i class="mdui-list-item-icon mdui-icon material-icons">security</i>
-            <div class="mdui-list-item-content">修改密码</div>
-        </li>
+        <!--<li class="mdui-list-item mdui-ripple">-->
+            <!--<i class="mdui-list-item-icon mdui-icon material-icons">security</i>-->
+            <!--<div class="mdui-list-item-content">修改密码</div>-->
+        <!--</li>-->
         <li class="mdui-list-item mdui-ripple">
             <i class="mdui-list-item-icon mdui-icon material-icons">feedback</i>
             <div class="mdui-list-item-content">我要反馈</div>
