--- a/owllook/templates/md/noti_book.html
+++ b/owllook/templates/md/noti_book.html
@@ -9,6 +9,7 @@
 <body class="mdui-appbar-with-toolbar">
 
 <div class="mdui-drawer mdui-drawer-close" id="drawer">
+    {% include "user_status.html" %}
     <ul class="mdui-list">
         <li class="mdui-list-item mdui-ripple">
             <i class="mdui-list-item-icon mdui-icon material-icons">library_books</i>
