--- a/owllook/templates/md/similar_user.html
+++ b/owllook/templates/md/similar_user.html
@@ -9,6 +9,7 @@
 <body class="mdui-appbar-with-toolbar">
 
 <div class="mdui-drawer mdui-drawer-close" id="drawer">
+    {% include "user_status.html" %}
     <ul class="mdui-list">
         <li class="mdui-list-item mdui-ripple">
             <i class="mdui-list-item-icon mdui-icon material-icons">library_books</i>
@@ -26,8 +27,8 @@
             <i class="mdui-list-item-icon mdui-icon material-icons">favorite</i>
             <div class="mdui-list-item-content"><a href="/md/book_list">我的书单</a></div>
         </li>
-        <li class="mdui-list-item-icon mdui-list-item mdui-ripple">
-            <i class="mdui-icon material-icons">notifications</i>
+        <li class="mdui-list-item mdui-ripple">
+            <i class="mdui-list-item-icon mdui-icon material-icons">notifications</i>
             <div class="mdui-list-item-content"><a href="/md/noti_book">新书提醒</a></div>
         </li>
         <li class="mdui-subheader">设置</li>
@@ -36,8 +37,8 @@
             <div class="mdui-list-item-content"><a href="/md/setting">个人设置</a></div>
         </li>
         <!--<li class="mdui-list-item mdui-ripple">-->
-            <!--<i class="mdui-list-item-icon mdui-icon material-icons">security</i>-->
-            <!--<div class="mdui-list-item-content">修改密码</div>-->
+        <!--<i class="mdui-list-item-icon mdui-icon material-icons">security</i>-->
+        <!--<div class="mdui-list-item-content">修改密码</div>-->
         <!--</li>-->
         <li class="mdui-list-item mdui-ripple">
             <i class="mdui-list-item-icon mdui-icon material-icons">feedback</i>
