--- a/owllook/templates/md/toolbar.html
+++ b/owllook/templates/md/toolbar.html
@@ -2,7 +2,7 @@
     <div class="mdui-toolbar mdui-color-indigo-400">
         <a href="javascript:;" class="mdui-btn mdui-btn-icon" id="toggle"><i
                 class="mdui-icon material-icons">menu</i></a>
-        <a href="/md" class="mdui-typo-headline">owllook</a>
+        <a href="/md" class="mdui-typo-headline" mdui-tooltip="{content: '回到首页'}">owllook</a>
         <div class="mdui-toolbar-spacer"></div>
         <div class="mdui-textfield mdui-textfield-expandable mdui-float-right">
             <button class="mdui-textfield-icon mdui-btn mdui-btn-icon" mdui-tooltip="{content: '输入小说名'}"><i
@@ -16,16 +16,50 @@
                     class="mdui-icon material-icons">close</i>
             </button>
         </div>
-        <a href="https://github.com/howie6879/owllook" target="_blank"
-           class="mdui-btn mdui-btn-icon mdui-ripple mdui-ripple-white mdui-hidden-xs" mdui-tooltip="{content: '开源'}">
-            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 36 36" enable-background="new 0 0 36 36" xml:space="preserve" class="mdui-icon" style="width: 24px;height:24px;">
-        <path fill-rule="evenodd" clip-rule="evenodd" fill="#ffffff" d="M18,1.4C9,1.4,1.7,8.7,1.7,17.7c0,7.2,4.7,13.3,11.1,15.5
-	c0.8,0.1,1.1-0.4,1.1-0.8c0-0.4,0-1.4,0-2.8c-4.5,1-5.5-2.2-5.5-2.2c-0.7-1.9-1.8-2.4-1.8-2.4c-1.5-1,0.1-1,0.1-1
-	c1.6,0.1,2.5,1.7,2.5,1.7c1.5,2.5,3.8,1.8,4.7,1.4c0.1-1.1,0.6-1.8,1-2.2c-3.6-0.4-7.4-1.8-7.4-8.1c0-1.8,0.6-3.2,1.7-4.4
-	c-0.2-0.4-0.7-2.1,0.2-4.3c0,0,1.4-0.4,4.5,1.7c1.3-0.4,2.7-0.5,4.1-0.5c1.4,0,2.8,0.2,4.1,0.5c3.1-2.1,4.5-1.7,4.5-1.7
-	c0.9,2.2,0.3,3.9,0.2,4.3c1,1.1,1.7,2.6,1.7,4.4c0,6.3-3.8,7.6-7.4,8c0.6,0.5,1.1,1.5,1.1,3c0,2.2,0,3.9,0,4.5
-	c0,0.4,0.3,0.9,1.1,0.8c6.5-2.2,11.1-8.3,11.1-15.5C34.3,8.7,27,1.4,18,1.4z"></path>
-      </svg>
-        </a>
+        <div class="mdui-btn mdui-btn-icon mdui-ripple mdui-ripple-white"
+             mdui-dialog="{target: '#owllook-theme'}" mdui-tooltip="{content: '设置主题'}">
+            <i class="mdui-icon material-icons">color_lens</i>
+        </div>
+        <!--<a href="https://github.com/howie6879/owllook" target="_blank"-->
+        <!--class="mdui-btn mdui-btn-icon mdui-ripple mdui-ripple-white mdui-hidden-xs" mdui-tooltip="{content: '开源'}">-->
+        <!--<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 36 36" enable-background="new 0 0 36 36" xml:space="preserve" class="mdui-icon" style="width: 24px;height:24px;">-->
+        <!--<path fill-rule="evenodd" clip-rule="evenodd" fill="#ffffff" d="M18,1.4C9,1.4,1.7,8.7,1.7,17.7c0,7.2,4.7,13.3,11.1,15.5-->
+        <!--c0.8,0.1,1.1-0.4,1.1-0.8c0-0.4,0-1.4,0-2.8c-4.5,1-5.5-2.2-5.5-2.2c-0.7-1.9-1.8-2.4-1.8-2.4c-1.5-1,0.1-1,0.1-1-->
+        <!--c1.6,0.1,2.5,1.7,2.5,1.7c1.5,2.5,3.8,1.8,4.7,1.4c0.1-1.1,0.6-1.8,1-2.2c-3.6-0.4-7.4-1.8-7.4-8.1c0-1.8,0.6-3.2,1.7-4.4-->
+        <!--c-0.2-0.4-0.7-2.1,0.2-4.3c0,0,1.4-0.4,4.5,1.7c1.3-0.4,2.7-0.5,4.1-0.5c1.4,0,2.8,0.2,4.1,0.5c3.1-2.1,4.5-1.7,4.5-1.7-->
+        <!--c0.9,2.2,0.3,3.9,0.2,4.3c1,1.1,1.7,2.6,1.7,4.4c0,6.3-3.8,7.6-7.4,8c0.6,0.5,1.1,1.5,1.1,3c0,2.2,0,3.9,0,4.5-->
+        <!--c0,0.4,0.3,0.9,1.1,0.8c6.5-2.2,11.1-8.3,11.1-15.5C34.3,8.7,27,1.4,18,1.4z"></path>-->
+        <!--</svg>-->
+        <!--</a>-->
+    </div>
+</div>
+
+
+<div class="mdui-dialog mdui-dialog-open" id="owllook-theme">
+    <div class="mdui-dialog-title">设置文档主题</div>
+    <div class="mdui-dialog-content" style="height: 148px;">
+
+        <p class="mdui-typo-title">主题色</p>
+        <div class="mdui-row-xs-1 mdui-row-sm-2 mdui-row-md-3">
+            <div class="mdui-col">
+                <label id="owllook-light" class="mdui-radio mdui-m-b-1">
+                    <input type="radio" name="owl-theme-layout" value="light" checked="">
+                    <i class="mdui-radio-icon"></i>
+                    Light
+                </label>
+            </div>
+            <div class="mdui-col">
+                <label id="owllook-dark" class="mdui-radio mdui-m-b-1">
+                    <input type="radio" name="owl-theme-layout" value="dark">
+                    <i class="mdui-radio-icon"></i>
+                    Dark
+                </label>
+            </div>
+        </div>
+    </div>
+    <div class="mdui-divider"></div>
+    <div class="mdui-dialog-actions">
+        <!--<button class="mdui-btn mdui-ripple mdui-float-left" mdui-dialog-cancel="">恢复默认主题</button>-->
+        <button id="themeBtn" class="mdui-btn mdui-ripple" mdui-dialog-confirm="">ok</button>
     </div>
 </div>
