--- a/owllook/templates/md/admin_setting.html
+++ b/owllook/templates/md/admin_setting.html
@@ -112,5 +112,5 @@
 </div>
 {% endblock %}
 {% block script %}
-<script src="/md/static/md/js/index.js"></script>
+<script src="/md/static/md/js/setting.js"></script>
 {% endblock %}
