--- a/owllook/templates/md/index.html
+++ b/owllook/templates/md/index.html
@@ -50,47 +50,46 @@
 {% include "toolbar.html" %}
 
 <div class="mdui-container">
-    <!--<div class="mdui-typo ">-->
-    <!--<center><h1>持续开发中，敬请期待，若有建议请及时反馈</h1></center>-->
-    <!--<center><h2><a target="_blank"-->
-    <!--href="https://github.com/howie6879/owllook">https://github.com/howie6879/owllook</a></h2>-->
-    <!--</center>-->
+    <div class="mdui-typo ">
+        <center><h1>持续开发中，敬请期待，若有建议请及时反馈</h1></center>
+        <center><h2><a target="_blank"
+                       href="https://github.com/howie6879/owllook">https://github.com/howie6879/owllook</a></h2>
+        </center>
 
-    <!--</div>-->
-    <div class="mdui-row">
-        <div class="mdui-col-sm-12 mdui-col-md-4 mdui-col-lg-3">
-            <div class="owl-ranking owl-search-ranking mdui-shadow-1">
-
-            </div>
-        </div>
-        <div class="mdui-col-sm-12 mdui-col-md-4 mdui-col-lg-3">
-            <div class="owl-ranking mdui-shadow-1">
-
-            </div>
-        </div>
-        <div class="mdui-col-sm-12 mdui-col-md-4 mdui-col-lg-3">
-            <div class="owl-ranking mdui-shadow-1">
-
-            </div>
-        </div>
-        <div class="mdui-col-sm-12 mdui-col-md-4 mdui-col-lg-3">
-            <div class="owl-ranking mdui-shadow-1">
-
-            </div>
-        </div>
-        <div class="mdui-col-sm-12 mdui-col-md-4 mdui-col-lg-3">
-            <div class="owl-ranking mdui-shadow-1">
-
-            </div>
-        </div>
-        <div class="mdui-col-sm-12 mdui-col-md-4 mdui-col-lg-3">
-            <div class="owl-ranking mdui-shadow-1">
-
-            </div>
-        </div>
     </div>
+    <!--<div class="mdui-row">-->
+        <!--<div class="mdui-col-sm-12 mdui-col-md-4 mdui-col-lg-3">-->
+            <!--<div class="owl-ranking owl-search-ranking mdui-shadow-1">-->
+
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="mdui-col-sm-12 mdui-col-md-4 mdui-col-lg-3">-->
+            <!--<div class="owl-ranking mdui-shadow-1">-->
+
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="mdui-col-sm-12 mdui-col-md-4 mdui-col-lg-3">-->
+            <!--<div class="owl-ranking mdui-shadow-1">-->
+
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="mdui-col-sm-12 mdui-col-md-4 mdui-col-lg-3">-->
+            <!--<div class="owl-ranking mdui-shadow-1">-->
+
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="mdui-col-sm-12 mdui-col-md-4 mdui-col-lg-3">-->
+            <!--<div class="owl-ranking mdui-shadow-1">-->
+
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="mdui-col-sm-12 mdui-col-md-4 mdui-col-lg-3">-->
+            <!--<div class="owl-ranking mdui-shadow-1">-->
+
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
 </div>
 {% endblock %}
 {% block script %}
-<script src="/md/static/md/js/index.js"></script>
 {% endblock %}
