--- a/owllook/templates/md/main.html
+++ b/owllook/templates/md/main.html
@@ -31,11 +31,12 @@
     </style>
 
 </head>
-<body class="mdui-appbar-with-toolbar mdui-theme-primary-indigo">
+<body class="mdui-appbar-with-toolbar mdui-theme-primary-indigo mdui-theme-accent-pink">
 {% block content %}{% endblock %}
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
 <script src="//cdn.bootcss.com/mdui/0.2.1/js/mdui.min.js"></script>
+<script src="/md/static/md/js/index.js"></script>
 <script src="/md/static/md/js/theme.js"></script>
 <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
 document.write(unescape("%3Cspan id='cnzz_stat_icon_1262602051'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s19.cnzz.com/z_stat.php%3Fid%3D1262602051%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script>
