--- a/owllook/templates/md/noti_book.html
+++ b/owllook/templates/md/noti_book.html
@@ -50,7 +50,7 @@
 {% include "toolbar.html" %}
 
 <div class="mdui-container-fluid">
-    <div class="mdui-textfield" style="width: 80%;margin-left: 10%;">
+    <div class="mdui-textfield" style="width: 80%;margin-left: 10%;margin-bottom: 12px;">
         <input name="author_name" class="mdui-textfield-input mdui-float-left" style="max-width: 70%" type="text"
                placeholder="作者名"/>
         <button id="authorBtn" class="mdui-btn mdui-color-theme-accent mdui-ripple mdui-float-right"
