--- a/owllook/templates/md/user_status.html
+++ b/owllook/templates/md/user_status.html
@@ -3,14 +3,14 @@
     {% if is_login %}
     <div class="mdui-card-header">
         <img class="mdui-card-header-avatar"
-             src="http://oe7yjec8x.bkt.clouddn.com/howie/2017-08-06-WechatIMG12029.png"/>
+             src="/static/novels/img/login.png"/>
         <div class="mdui-card-header-title">{{user}}</div>
         <div class="mdui-card-header-subtitle">我爱读书</div>
     </div>
     {% else %}
     <div class="mdui-card-header">
         <img class="mdui-card-header-avatar"
-             src="http://oe7yjec8x.bkt.clouddn.com/howie/2017-08-06-WechatIMG12024.png"/>
+             src="/static/novels/img/logout.png"/>
         <div class="mdui-card-header-title">请登录</div>
         <div class="mdui-card-header-subtitle">以下功能，等你体验</div>
     </div>
