--- a/owllook/templates/md/main.html
+++ b/owllook/templates/md/main.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="shortcut icon" href="/static/novels/img/favicon.ico"/>
     <link rel="bookmark" href="/static/novels/img/favicon.ico"/>
-    <link href="//cdn.bootcss.com/mdui/0.2.1/css/mdui.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/mdui/0.2.1/css/mdui.min.css" rel="stylesheet">
     <meta name="msvalidate.01" content="7F5A4F41F59B7840336A1530F6D3474E"/>
     {% block header %}{% endblock %}
     <meta name="baidu-site-verification" content="j5gv2S1IaS"/>
@@ -35,7 +35,7 @@
 {% block content %}{% endblock %}
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-<script src="//cdn.bootcss.com/mdui/0.2.1/js/mdui.min.js"></script>
+<script src="https://cdn.bootcss.com/mdui/0.2.1/js/mdui.min.js"></script>
 <script src="/md/static/md/js/index.js"></script>
 <script src="/md/static/md/js/theme.js"></script>
 <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
