--- a/owllook/templates/md/noti_book.html
+++ b/owllook/templates/md/noti_book.html
@@ -42,7 +42,9 @@
         <!--</li>-->
         <li class="mdui-list-item mdui-ripple">
             <i class="mdui-list-item-icon mdui-icon material-icons">feedback</i>
-            <div class="mdui-list-item-content">我要反馈</div>
+            <div class="mdui-list-item-content">
+                <a target="_blank" href="https://github.com/howie6879/owllook/issues/9">我要反馈</a>
+            </div>
         </li>
     </ul>
 </div>
@@ -77,6 +79,21 @@
         </div>
     </div>
     {% endif %}
+
+    <!--<div class="mdui-panel mdui-panel-fluid" id="panel">-->
+        <!--{%for item in author_list%}-->
+        <!--<div class="mdui-panel-item">-->
+            <!--<div class="mdui-panel-item-header">-->
+                <!--<div class="mdui-panel-item-title">作者名</div>-->
+                <!--<div class="mdui-panel-item-summary">{{item.author_name}}</div>-->
+                <!--<i class="mdui-panel-item-arrow mdui-icon material-icons">keyboard_arrow_down</i>-->
+            <!--</div>-->
+            <!--<div class="mdui-panel-item-body">-->
+                <!--<p class="mdui-text-color-black-icon">书籍</p>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--{%endfor%}-->
+    <!--</div>-->
 
 </div>
 {% endblock %}
