--- a/owllook/templates/md/similar_user.html
+++ b/owllook/templates/md/similar_user.html
@@ -42,7 +42,9 @@
         <!--</li>-->
         <li class="mdui-list-item mdui-ripple">
             <i class="mdui-list-item-icon mdui-icon material-icons">feedback</i>
-            <div class="mdui-list-item-content">我要反馈</div>
+            <div class="mdui-list-item-content">
+                <a target="_blank" href="https://github.com/howie6879/owllook/issues/9">我要反馈</a>
+            </div>
         </li>
     </ul>
 </div>
